    analysis.dihedrals.Janin analysis to give user more fine grained control
    over selections (PR #2899)
  * Improved performance of select_atoms on strings (e.g. name, type, resname) and
    'protein' selection (#2751 PR #2755)
  * Added an RDKit converter that works for any input with all hydrogens
    explicit in the topology (Issue #2468, PR #2775)
  
Changes
  * Introduces encore specific C compiler arguments to allow for lowering of
    optimisations on non-x86 platforms (Issue #1389, PR #3149)
  * Continuous integration uses mamba rather than conda to install the
    dependencies (PR #2983)
  * removes deprecated `as_Universe` function from MDAnalysis.core.universe,
    as a result :class:`MDAnalysis.analysis.leaflet.LeafletFinder` now only
    accepts Universes for its `universe` argument (Issue #2920)
  * deprecated Python escape sequence usage has been fixed in our test suite,
    and the test suite will now raise an error for this usage of `\` (PR #2885)
  * deprecated NumPy type aliases have been replaced with their actual types
    (see upstream NumPy PR 14882), and our pytest configuration will raise an
    error for any violation when testing with development NumPy builds
    (`1.20.0`)
  * Changes development status from Beta to Mature (Issue #2773)
  * Removes deprecated MDAnalysis.analysis.hole, please use
    MDAnalysis.analysis.hole2.hole instead (Issue #2739)
  * Replaces use of mock in favour of unittest.mock (Issue #2777)
  * Removes support for passing `atoms` to XYZWriter. (Issue #2739, PR #2754)
  * Removes; deprecated support for using Writer.write(Timestep), deprecated
    Writer.write_next_timestep, use write() instead. (Issue #2739)
  * Removes deprecated density_from_Universe, density_from_PDB, Bfactor2RMSF,
    and notwithin_coordinates_factory from MDAnalysis.analysis.density
    (Issue #2739)
  * Removes deprecated ProgressMeter (Issue #2739)
  * Removes deprecated MDAnalysis.units.N_Avogadro (PR #2737)